# electronic-prescription-service-account-resources

./: .eslintrc  .flake8  .gitallowed  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pre-commit-config.yml  .tool-versions  .trivyignore.yaml  CONTRIBUTING.md  LICENSE  LICENSE-THE-TOMORROW-OPEN-SOURCE-TECHNOLOGY-LICENSE  Makefile  README.md  _config.yml  build.mjs  dev.html  index.html  int.html  jest.default.config.ts  log.txt  package-lock.json  package.json  poetry.toml  prod.html  pyproject.toml  qa.html  ref.html  sonar-project.properties  tsconfig.build.json  tsconfig.defaults.json  vitest.workspace.js  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
SAMtemplates/: common_lambda_resources.yml  lambda_resources.yaml  lambda_resources_bootstrap.yaml
_data/: dev-account_AccountResources_UK_eu-west-2_deployments.csv  dev-account_AccountResources_UK_eu-west-2_latest.csv  dev-account_AccountResources_US_us-east-1_deployments.csv  dev-account_AccountResources_US_us-east-1_latest.csv  dev-account_Monitoring_eu-west-2_deployments.csv  dev-account_Monitoring_eu-west-2_latest.csv  dev-account_account-resources-cdk-uk_eu-west-2_deployments.csv  dev-account_account-resources-cdk-uk_eu-west-2_latest.csv  dev-account_account-resources-cdk-us_us-east-1_deployments.csv  dev-account_account-resources-cdk-us_us-east-1_latest.csv  dev-account_account-resources_deployments.csv  dev-account_account-resources_latest.csv  dev-account_artillery-resources_deployments.csv  dev-account_artillery-resources_latest.csv  dev-account_monitoring_deployments.csv  dev-account_monitoring_eu-west-2_deployments.csv  dev-account_monitoring_eu-west-2_latest.csv  dev-account_monitoring_latest.csv  dev-account_secrets_deployments.csv  dev-account_secrets_latest.csv  dev-account_vpc-resources_deployments.csv  dev-account_vpc-resources_latest.csv  dev-ci_ci-resources_deployments.csv  dev-ci_ci-resources_latest.csv  dev-lambda_lambda-resources-pr-443_deployments.csv  dev-lambda_lambda-resources_deployments.csv  dev-lambda_lambda-resources_latest.csv  dev_account-resources-cdk-uk_eu-west-2_deployments.csv  dev_account-resources-cdk-uk_eu-west-2_latest.csv  dev_account-resources-cdk-us_us-east-1_deployments.csv  dev_account-resources-cdk-us_us-east-1_latest.csv  dev_iam-cdk_eu-west-2_deployments.csv  (+117 more)
(+104 files in other folders)
