[project]
python = "^3.12"
name = "electronic-prescription-service-account-resources"

[tool.poetry]
name = "electronic-prescription-service-account-resources"
description = "EPS AWS account level resource definitions"
version = "0.0.1-alpha"
authors = [
  "EPS Team <eps.tem@nhs.net>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/electronic-prescription-service-account-resources"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"
cfn-lint = "^1.41.0"
cfn-flip = "^1.3.0"
boto3 = "^1.42.53"
pygithub = "^2.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.1"

[tool.poetry.scripts]
