[project]
python = "^3.12"
name = "electronic-prescription-service-account-resources"

[tool.poetry]
name = "electronic-prescription-service-account-resources"
description = "EPS AWS account level resource definitions"
version = "0.0.1-alpha"
authors = [
  "EPS Team <eps.tem@nhs.net>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/electronic-prescription-service-account-resources"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.3"
pre-commit = "^4.5.1"
cfn-flip = "^1.3.0"

[tool.poetry.group.setup_github_repo.dependencies]
boto3 = "^1.42.77"
pygithub = "^2.9.0"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
testpaths = ["packages/setup_github_repo/tests"]
python_files = ["test_*.py"]

[tool.poetry.scripts]
